@@ -38,15 +38,6 @@ A list of all bugs open for the next v3.0.2 release can be found at
 
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
 
-  *) SSL: doesn't work on Solaris.
-   Trunk patch: http://svn.apache.org/viewvc?view=rev&revision=1196822
-                http://svn.apache.org/viewvc?view=rev&revision=1196922
-   Jira: https://issues.apache.org/jira/browse/TS-1011
-   +1: zwoop, igalic, ericb
-   igalic says: n.b.: TS-1018 removes the default of blocking SSL, when
-   acceleration is not enabled (which was never the case) - should we
-   backport that as well?
-
 
 PATCHES PROPOSED TO BACKPORT FROM TRUNK:
   [ New proposals should be added at the end of the list ]
