@@ -1,7 +1,11 @@
                                                          -*- coding: utf-8 -*-
 
 Changes with Apache Traffic Server 3.0.2
-  *) TS-1013: Allow ssl_multicert.config to support CA chains per host
+  *) [TS-1011]: SSL doesn't work on Solaris.
+
+  *) [TS-1013]: Allow ssl_multicert.config to support CA chains per host
+
+  *) [TS-944]: ssl.server.cert.path & ssl.server.private_key.path do not work as expected
 
   *) [TS-906]: We do not honor / use the configuration option for
    proxy.config.http.forward.proxy_auth_to_parent.
